Mise en place EF Core

--- a/Staff-hub-api/Properties/launchSettings.json
+++ b/Staff-hub-api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Staff_hub_api": {
+    "StaffHubApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
