--- a/Staff-hub-api/appsettings.json
+++ b/Staff-hub-api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "StaffHubDBConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=StaffHub;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
+
