Mise en place API

--- a/StaffHubApi.Repositories/StaffHubApi.Repositories.csproj
+++ b/StaffHubApi.Repositories/StaffHubApi.Repositories.csproj
@@ -13,7 +13,10 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StaffHubApi.Models\StaffHubApi.Models.csproj" />
   </ItemGroup>
 
 </Project>
