--- a/StaffHubApi.Services/StaffHubApi.Services.csproj
+++ b/StaffHubApi.Services/StaffHubApi.Services.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StaffHubApi.Repositories\StaffHubApi.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
