--- a/Staff-hub-api/StaffHubApi.csproj
+++ b/Staff-hub-api/StaffHubApi.csproj
@@ -1,10 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>StaffHubApi</RootNamespace>
     <AssemblyName>StaffHubApi</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Resource.resx" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.1">
@@ -17,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StaffHubApi.Repositories\StaffHubApi.Repositories.csproj" />
+    <ProjectReference Include="..\StaffHubApi.Services\StaffHubApi.Services.csproj" />
   </ItemGroup>
 
 </Project>
