--- a/Staff-hub-api/appsettings.json
+++ b/Staff-hub-api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "StaffHubDBConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=StaffHub;Integrated Security=True"
+    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=StaffHub;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
