Suppression des catégories

--- a/Staff-hub-api/appsettings.json
+++ b/Staff-hub-api/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=StaffHub;Integrated Security=True" 
+    "DefaultConnection": "Server=tcp:cmnext-sql-db.database.windows.net,1433;Initial Catalog=staffhub;Persist Security Info=False;User ID=cmnext-sql-admin;Password=C32u4jjs9k9inXsX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+
   },
   "AllowedHosts": "*"
 }
