--- a/Staff-hub-api/web.config
+++ b/Staff-hub-api/web.config
@@ -5,13 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile="\\?\%home%\LogFiles\stdout" hostingModel="inprocess">
-        <environmentVariables>
-          <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44355" />
-          <environmentVariable name="COMPLUS_ForceENC" value="1" />
-          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
-        </environmentVariables>
-      </aspNetCore>
+      <aspNetCore processPath="dotnet" arguments=".\StaffHubApi.dll" stdoutLogEnabled="false" stdoutLogFile="\\?\%home%\LogFiles\stdout" hostingModel="inprocess" />
     </system.webServer>
   </location>
 </configuration>
